<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/btn_switch_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:foreground="?selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_setting_theme" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_setting_theme"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="@dimen/text_title_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_title_setting_theme"
                    android:textSize="@dimen/text_sub_title_size" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="16dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btn_switch_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_setting_list" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_setting_list"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_current_video_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Default"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_switch_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_setting_category" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_setting_category"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_current_category_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="List"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_switch_player_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_setting_player" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_setting_player"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_current_player_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Portrait"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_setting_privacy" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_setting_privacy"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_title_setting_privacy"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_setting_rate" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_setting_rate"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_title_setting_rate"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_setting_more" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_setting_more"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_title_setting_more"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_setting_info" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_setting_about"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_title_setting_about"
                android:textSize="@dimen/text_sub_title_size" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

